# password-manager

./: .gitignore  1q  Cargo.toml  README.md
sql/schema/: 001_pw.sql
src/: add_entry.rs  get_entry.rs  init.rs  lib.rs  main.rs  verification.rs
src/cred/: mod.rs
src/sql/schema/: 001_pw.sql
src/vault/: mod.rs
