[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
rand = "0.8.0"
clap = { version = "4.5.49", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.20.0", features = ["full"] }
